<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/receiveorder"
            android:title="@string/menu_receiver" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/send_order"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/order" />
    </group>


</menu>
