<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receive_list"
            android:icon="@drawable/receiveorder"
            android:title="@string/menu_receiver" />
        <item
            android:id="@+id/nav_send_list"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_map_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_categories_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
    </group>


</menu>
